v2.2.12 Live 2/10/2021 PROJECTS: Lics - border on mobile; AvE - wording.  ABOUT: Content and style - major revisions and overhaul.  NAVBAR: Mobile - fixed bug where dropdown would open on page load.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -572,6 +572,15 @@ db   8D 88.     Y8b  d8    88      .88.   `8b  d8' 88  V888 db   8D
     }
 }
 
+#facts > ul{
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    > li {
+        border-bottom: 1px solid $mid-blue;
+    }
+}
+
 
 /*
  .o88b.  .d88b.  d8b   db d888888b  .d8b.   .o88b. d888888b 
@@ -905,6 +914,10 @@ YP  YP  YP Y88888P Y8888D' Y888888P YP   YP       `Y88'Y8 ~Y8888P' Y88888P 88   
         -webkit-transform: scale(1.05, 1.05);
         transform: scale(1.05, 1.05);
         cursor:pointer;
+    }
+
+    .badge {
+        font-size:3vh;
     }
 
     #fast-facts {
